unship-sh/crates/unship-cli/tests/snapshots/cli_snapshot_test__list_json.snap
---
source: crates/unship-cli/tests/cli_snapshot_test.rs
assertion_line: 145
expression: redacted
---
[
  {
    "created": "[timestamp]",
    "id": 1,
    "position": 1.0,
    "status": "backlog",
    "tags": [
      "backend",
      "security"
    ],
    "title": "Implement auth",
    "updated": "[timestamp]"
  },
  {
    "created": "[timestamp]",
    "id": 2,
    "position": 1.0,
    "status": "in-progress",
    "title": "Write tests",
    "updated": "[timestamp]"
  },
  {
    "completed": "[timestamp]",
    "created": "[timestamp]",
    "id": 3,
    "position": 1.0,
    "status": "done",
    "title": "Deploy app",
    "updated": "[timestamp]"
  }
]
