unship-sh/crates/unship-cli/tests/snapshots/cli_snapshot_test__repair_json.snap
---
source: crates/unship-cli/tests/cli_snapshot_test.rs
assertion_line: 207
expression: redacted
---
{
  "actions_taken": [],
  "mismatched_ids": [],
  "noncanonical_statuses": [],
  "unindexed_tasks": [
    {
      "has_frontmatter_id": false,
      "path": "[path]",
      "title": "Loose note"
    }
  ],
  "unknown_statuses": [
    {
      "path": "[path]",
      "status": "yolo",
      "title": "Loose note"
    }
  ]
}
