unship-sh/crates/unship-cli/tests/snapshots/cli_snapshot_test__show_json.snap
---
source: crates/unship-cli/tests/cli_snapshot_test.rs
assertion_line: 155
expression: redacted
---
{
  "body": "- [x] Design schema\n- [ ] Add endpoints\n- [ ] Add middleware\n",
  "created": "[timestamp]",
  "id": 1,
  "position": 1.0,
  "status": "backlog",
  "subtask_progress": {
    "completed": 1,
    "total": 3
  },
  "tags": [
    "backend",
    "security"
  ],
  "title": "Implement auth",
  "updated": "[timestamp]"
}
